# amazon_wishlist_pricewatch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions---support.md
.github/workflows/: codeql-analysis.yml
amazon_wishlist_pricewatch/: logger.py  my_types.py  notify.py  pricewatch.py
pricewatch/: amzn_pricewatch.py  config.json  logger.py  my_types.py  notify.py
tests/: config2.json  conftest.py  parsed_html.txt  parsed_text.txt  test_pricewatch.py  wishlist_items.json
