[metadata]
name = amazon_wishlist_pricewatch
version = 0.1
description = Watch Amazon wishlist for price reductions.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/sam0jones0/amazon_wishlist_pricewatch
author = Sam Jones
author_email = sam0jones0@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking
    Topic :: Utilities
    Typing :: Typed
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords = amazon, wishlist, price, checker, price cut, deal
project_urls =
    Bug Reports=https://github.com/sam0jones0/amazon_wishlist_pricewatch/issues
    Say Thanks!=https://github.com/sam0jones0/amazon_wishlist_pricewatch/stargazers
    Source=https://github.com/sam0jones0/amazon_wishlist_pricewatch

[options]
setup_requires = setuptools_scm
package_dir = =amazon_wishlist_pricewatch
packages = find:
python_requires = >=3.6, <4
install_requires =
    beautifulsoup4
    requests

[options.packages.find]
where = amazon_wishlist_pricewatch

[options.entry_points]
console_scripts =
    amazon_wishlist_pricewatch=amazon_wishlist_pricewatch.pricewatch:main

[options.extras_require]
telegram = python-telegram-bot
dev =
    black
    mypy
test =
    pytest

[options.package_data]
pricewatch =
    config.json
